@@ -1,6 +1,7 @@
 Revision history for POE-Quickie
 
 {{$NEXT}}
+    - Print compilation errors if we fail to load a plugin
 
 0.09  Mon Jun 28 21:24:31 GMT 2010
     - Color exceptions red when using terminal colors
